feat: add MixinTransformerHook